# shipit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.dev.yaml  compose.local.yaml  compose.yaml
.github/scripts/: extract-changelog.sh
.github/workflows/: changelog-check.yml  docker.yml
backend/: .env.dev  Dockerfile.dev  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/data/: ecs_schema.json
backend/app/routers/: admin.py  api_upload.py  audit.py  auth.py  health.py  history.py  indexes.py  keys.py  patterns.py  settings.py  templates.py  upload.py
backend/app/services/: ai_mappings.py  audit.py  audit_shipping.py  auth.py  database.py  ecs.py  geoip.py  grok_patterns.py  ingestion.py  oidc.py  opensearch.py  parser.py  rate_limit.py  request_utils.py  retention.py  transforms.py
backend/tests/: conftest.py  test_ai_mappings.py  test_api_upload.py  test_audit_shipping.py  test_auth.py  test_auth_timing.py  test_chunked_upload.py  test_database.py  test_database_security.py  test_ecs.py  test_format_validation.py  test_geoip.py  test_health.py  test_indexes.py  test_ingestion.py  test_ip_trust.py  test_parser.py  test_patterns.py  test_security_config.py  test_timestamp_history.py  test_transforms.py
deploy/: nginx.conf  supervisord.conf
frontend/: Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
nginx/: nginx.conf
scripts/: download-ecs-schema.py
(+25 files in other folders)
